# cdk-release-summarizer

./: README.md  pyproject.toml
src/github_release_summarizer/: analyzer.py  bedrock_client.py  github_client.py  main.py
tests/unit/: test_analyzer.py
